2006-03-23  Brent Smith  <gnome@nextreality.net>

	* stylesheets/search2html.xsl:
	Display a header on the search results which tells the user how many
	results were returned from the query, fixes #334923

2006-03-22  Brent Smith  <gnome@nextreality.net>

	* src/gtkentryaction.c: (gtk_entry_action_finalize):
	* src/yelp-db-pager.c: (db_pager_dispose):
	* src/yelp-info-pager.c: (info_pager_dispose):
	* src/yelp-man-pager.c: (man_pager_dispose):
	* src/yelp-pager.c: (pager_dispose):
	* src/yelp-search-pager.c: (search_pager_dispose):
	* src/yelp-toc-pager.c: (toc_pager_dispose):
	* src/yelp-xslt-pager.c: (xslt_pager_dispose):
	Don't free an object's private data since it is de-allocated
	automatically if it is created using g_type_class_add_private() 
	-backport from HEAD

2006-03-21  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-html.cpp:
	Keep track of timeout and remove when not needed
	Fixes bug #335306


==================== 2.14.0 ====================

2006-03-17  Jérémy Ar Floc'h  <jeremy.lefloch@gmail.com>

	* configure.in:
	* po/br.po: Added Breton translation.

2006-03-12  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.14.0

2006-02-27  Don Scorgie  <dscorgie@cvs.gnome.org>

	* stylesheets/search2html.xsl: 
	* src/yelp-search-pager.c: 
	While slow searching, sort the results to provide some sanity
	Remove score when searching with Beagle
	
	* src/yelp-search-pager.c: 
	Look for spaces when processing man page search results
	This stops (at least) FreeBSD off-by-1 errors (bug #331828)

==================== 2.13.6 ====================

2006-02-26  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.13.6

2006-02-19  Brent Smith  <gnome@nextreality.net>

	* src/yelp-search-pager.c: (search_pager_process),
	(search_pager_process_idle):
	If the beagle daemon is not running, fall back to basic search support
	and print a warning on the console to the user; Patch from Joe Shaw,
	fixes #331598
